# aioimaplib

./: .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTE.md  CONTRIBUTING.md  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  release.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
aioimaplib/: __init__.py  aioimaplib.py  imap_testing_server.py  imapserver.py
aioimaplib/tests/: example.py  imapserver.py  server_fixture.py  ssl_cert.py  test_acceptance_aioimaplib.py  test_aioimaplib.py  test_aioimaplib_capabilities.py  test_aioimaplib_clocked.py  test_imapserver.py  test_imapserver_aioimaplib.py  test_imapserver_imaplib.py  test_imapserver_imaplib2.py  test_ssl_cert.py  test_utils.py
example/: imap_fetch.py  xoauth2.py
tests/: example.py  imapserver.py  server_fixture.py  ssl_cert.py  test_acceptance_aioimaplib.py  test_aioimaplib.py  test_aioimaplib_capabilities.py  test_aioimaplib_clocked.py  test_idle.py  test_imapserver.py  test_imapserver_aioimaplib.py  test_imapserver_imaplib.py  test_imapserver_imaplib2.py  test_ssl_cert.py  test_utils.py
tests/data/: test_attachment.eml
