[tool.poetry]
name = "aioimaplib"
version = "1.2.0"
description = "Python asyncio IMAP4rev1 client library"
authors = ["Bruno THOMAS <bthomas@iroco.fr>"]
license = "GPL-3.0"
readme = "README.rst"
repository = "https://github.com/bamthomas/aioimaplib"
keywords = ["asyncio", "mail", "imap"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
    "Topic :: Internet"
]

packages = [{include = "aioimaplib"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
pytest-rerunfailures = "^15.0"
mock = "^5.1"
pytz = "^2024"
tzlocal = "^5.2"
imaplib2 = "3.6"
docutils = "^0.21"
pyOpenSSL = "^24.3"
twine = "^6.0"
httpx-oauth = "^0.16"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"