[metadata]
name = aioimaplib
version = 1.0.1
author = Bruno Thomas
author_email = bruno@barreverte.fr
description = Python asyncio IMAP4rev1 client library
long_description = file: README, CHANGES
keywords= asyncio, mail, imap
python_requires = >=3.7
license = GPL-3.0
url = https://github.com/bamthomas/aioimaplib
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Communications :: Email :: Post-Office :: IMAP
    Topic :: Internet

[options]
zip_safe = False
packages = find:
tests_require =
    pytest
    asynctest
    mock
    pytz
    tzlocal
    imaplib2
    docutils

[options.packages.find]
exclude =
    *.tests
    *.tests.*
